[package]
name = "rauthy-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
argon2 = { workspace = true }
askama = { workspace = true }
askama_actix = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
derive_more = { workspace = true }
jwt-simple = { workspace = true }
## Add openssl-sys as a direct dependency, so it can be cross compiled to
## x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rauthy-common = { path = "../rauthy-common" }
rauthy-models = { path = "../rauthy-models" }
redhac = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
