[package]
name = "rauthy-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }
rauthy-service = { path = "../service" }

actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
actix-web-validator = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
mime_guess = { workspace = true }
num_cpus = { workspace = true }
rust-embed = { version = "8", features = ["actix-web", "tokio"] }
semver = { workspace = true }
spow = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
