[package]
name = "rauthy-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }
rauthy-service = { path = "../service" }

actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
num_cpus = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
rust-embed = { workspace = true }
semver = { workspace = true }
spow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
