[package]
name = "rauthy-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-error = { path = "../error" }

actix-web = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
gethostname = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
