[package]
name = "rauthy-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-error = { path = "../error" }

actix-web = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
brotli = { workspace = true }
chrono = { workspace = true }
cidr = { workspace = true }
flume = { workspace = true }
gethostname = { workspace = true }
libflate = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }

[dev-dependencies]
pretty_assertions = "1"
