[package]
name = "rauthy-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# needed to make tests work with the `sqlite` feature which seems to enable some broken doctest in the webauthn-rs crate
doctest = false

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-notify = { path = "../notify" }

accept-language = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
arc-swap = { workspace = true }
argon2 = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
atrium-api = { workspace = true }
atrium-common = { workspace = true }
atrium-identity = { workspace = true }
atrium-oauth = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
dotenvy = { workspace = true }
ed25519-compact = { workspace = true }
flate2 = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hiqlite = { workspace = true }
hiqlite-macros = { workspace = true }
hmac-sha256 = { workspace = true }
hmac-sha512 = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
lettre = { workspace = true }
maxminddb = { workspace = true }
mime = { workspace = true }
num_cpus = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
# 0.8 is necessary to provide a proper `thread_rng` for `rsa`
rand_08 = { package = "rand", version = "0.8" }
rand_core = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rio_api = { workspace = true }
rio_turtle = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rsa = { workspace = true }
s3-simple = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
serde_rusqlite = { workspace = true }
spow = { workspace = true }
svg-hush = { workspace = true }
strum = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

# Postgres -> integrate by alphabet when finished and sqlx as been finally removed
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
refinery = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.18.2"
tokio-test = "*"
