[package]
name = "rauthy-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-multipart = { workspace = true }
actix-web = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
css-color = { workspace = true }
cryptr = { workspace = true }
derive_more = { workspace = true }
flume = { workspace = true }
hiqlite = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
rio_turtle = { workspace = true }
ruma = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
oxiri = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
