[package]
name = "rauthy-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-multipart = { workspace = true }
actix-web = { workspace = true }
argon2 = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
css-color = { workspace = true }
cryptr = { workspace = true }
deadpool = { workspace = true }
hiqlite = { workspace = true }
image = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
reqwest = { workspace = true }
rio_turtle = { workspace = true }
rusqlite = { workspace = true }
ruma = { workspace = true }
s3-simple = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
serde_urlencoded = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
svg-hush = { workspace = true }
time = { workspace = true }
tokio-postgres = { workspace = true }
tokio-pg-mapper = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
oxiri = { workspace = true }
