[package]
name = "rauthy-jwt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }

chrono = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
