[package]
name = "rauthy-middlewares"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }

actix-web = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
