[package]
name = "rauthy-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# needed to make tests work with the `sqlite` feature which seems to enable some broken doctest in the webauthn-rs crate
doctest = false

[features]
default = []
postgres = []

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-notify = { path = "../notify" }

accept-language = { workspace = true }
actix = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-web-lab = { workspace = true }
actix-service = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
askama = { workspace = true }
askama_actix = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
css-color = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
ed25519-compact = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hiqlite = { workspace = true }
hmac-sha256 = { workspace = true }
hmac-sha512 = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
jwt-simple = { workspace = true }
lettre = { workspace = true }
mime = { workspace = true }
num_cpus = { workspace = true }
num-traits = { workspace = true }
## Add openssl-sys as a direct dependency, so it can be cross compiled to
## x86_64-unknown-linux-musl using the "vendored" feature below
openssl = { workspace = true }
openssl-sys = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rio_api = { workspace = true }
rio_turtle = { workspace = true }
rust-embed = { workspace = true }
rsa = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
serde_with = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.18.2"
tokio-test = "*"
