[package]
name = "rauthy-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# needed to make tests work with the `sqlite` feature which seems to enable some broken doctest in the webauthn-rs crate
doctest = false

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-notify = { path = "../notify" }

accept-language = { workspace = true }
actix = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
dotenvy = { workspace = true }
ed25519-compact = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hiqlite = { workspace = true }
hmac-sha256 = { workspace = true }
hmac-sha512 = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
jwt-simple = { workspace = true }
lettre = { workspace = true }
mime = { workspace = true }
num_cpus = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rinja = { workspace = true }
rinja_actix = { workspace = true }
rio_api = { workspace = true }
rio_turtle = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rust-embed = { workspace = true }
rsa = { workspace = true }
s3-simple = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
serde_rusqlite = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
svg-hush = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

# Postgres -> integrate by alphabet when finished and sqlx as been finally removed
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true }
refinery = { workspace = true }
tokio-pg-mapper = { workspace = true }
tokio-pg-mapper-derive = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.18.2"
tokio-test = "*"
