[package]
name = "rauthy-notify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }

async-trait = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
reqwest = { workspace = true }
ruma = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
