[package]
name = "rauthy-schedulers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }

actix-web = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
hiqlite = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
