[package]
name = "rauthy-schedulers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }
rauthy-service = { path = "../service" }

actix-web = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
hiqlite = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
