[package]
name = "rauthy-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-models = { path = "../models" }

actix-web = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
jwt-simple = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
scim_v2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
