[package]
name = "rauthy-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rauthy-api-types = { path = "../api_types" }
rauthy-common = { path = "../common" }
rauthy-error = { path = "../error" }
rauthy-jwt = { path = "../jwt" }
rauthy-data = { path = "../data" }

actix-web = { workspace = true }
atrium-api = { workspace = true }
atrium-common = { workspace = true }
atrium-oauth = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cryptr = { workspace = true }
openssl = { workspace = true }
openssl-sys = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
