[package]
name = "rauthy-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arc-swap = { workspace = true }
notify = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
