[package]
name = "rauthy-wasm-modules"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm"

#[profile.release]
#opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[features]
default = ["console_error_panic_hook"]
md = ["dep:ammonia", "dep:pulldown-cmark"]
spow = ["dep:spow"]

[dependencies]
ammonia = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
spow = { workspace = true, optional = true, features = ["client"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
