[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[dependencies]
actix-web = { version = "4.4", features = ["rustls-0_21"] }
anyhow = "1.0.75"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }

rauthy-client = { path = "../..", default-features = false, features = ["actix-web"] }
