[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["http2"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }

rauthy-client = { path = "../..", features = ["axum", "userinfo"] }
